add images, styling cards

--- a/src/App.css
+++ b/src/App.css
@@ -1,49 +1,19 @@
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
 @import url('https://fonts.googleapis.com/css?family=Noto+Serif|Noto+Sans&display=swap');
 
 body, html {
-  background: rgb(35,201,255);
-  background: linear-gradient(180deg, rgba(35,201,255,1) 0%, rgba(242,121,246,1) 69%); 
+  /* background: rgba(242,121,246,1); */
   box-sizing: border-box;
   margin: 0 auto;
   min-height: 100%;
   width: 100%;
   font-family: 'Noto Sans', sans-serif;
+  font-size: 20px;
+
+  @media (min-width: 768px) {
+    html { font-size: 26px; }
+  }
+  
+  @media (min-width: 1200px) {
+    html { font-size: 28px; }
+  }
 }
