--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body, html {
   margin: 0 auto;
   min-height: 100%;
   width: 100%;
+  overflow-x: hidden;
   font-family: 'Noto Sans', sans-serif;
   font-size: 20px;
 
